--- a/front-end-login/src/app/app.component.html
+++ b/front-end-login/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-dashboard></app-dashboard>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
+<div class="fixed-bottom">
+  <app-footer></app-footer>
+</div>
