--- a/front-end-login/src/app/auth/login/login.component.html
+++ b/front-end-login/src/app/auth/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<form [formGroup]="loginForm">
+  <p class="text-danger"> <strong> {{loginError}} </strong>  </p>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input
+      formControlName="email"
+      type="email"
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+    />
+    <div
+      *ngIf="email.invalid && (email.dirty || email.touched)"
+      class="text-danger"
+    >
+      <div *ngIf="email.errors?.['required']">Email is required.</div>
+      <div *ngIf="email.errors?.['email']">Email must be valid</div>
+    </div>
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input
+      formControlName="password"
+      type="password"
+      class="form-control"
+      id="exampleInputPassword1"
+    />
+    <div
+      *ngIf="password.invalid && (password.dirty || password.touched)"
+      class="text-danger"
+    >
+      <div *ngIf="password.errors?.['required']">Password is required.</div>
+    </div>
+  </div>
+
+  <button type="submit" (click)="login()" class="btn btn-primary">Login</button>
+</form>
